--- a/node-red-contrib-artnet.html
+++ b/node-red-contrib-artnet.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-    RED.nodes.registerType('artnet out',{
+    RED.nodes.registerType('artnet out hglight',{
         category: 'output',
         color: '#a6bbcf',
         defaults: {
@@ -15,7 +15,7 @@
         align: "right",
         icon: "light.png",
         label: function() {
-            return this.name || "artnet";
+            return this.name || "artnet hglight";
         }
     });
 </script>
@@ -47,6 +47,6 @@
     </div>
 </script>
 
-<script type="text/x-red" data-help-name="artnet out">
-    <p>artnet</p>
+<script type="text/x-red" data-help-name="artnet out hglight">
+    <p>artnet hglight</p>
 </script>
