--- a/node-red-contrib-artnet.html
+++ b/node-red-contrib-artnet.html
@@ -20,7 +20,7 @@
     });
 </script>
 
-<script type="text/x-red" data-template-name="artnet out">
+<script type="text/x-red" data-template-name="artnet out hglight">
 	<div class="form-row">
         <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
         <input type="text" id="node-input-name" placeholder="Name">
